--- a/Sheka/Base/Мой менеджмент.md
+++ b/Sheka/Base/Мой менеджмент.md
@@ -61,6 +61,22 @@ win-win стратегия. Помощь окружающим
 
 - прокачивай распознование своих эмоций. 
 например, ты беспокоишься, что нифига не сделал и скоро надо будет отчитываться. Проговори это в голове, проговори последствия, всё ли так страшно? Можно ли сейчас успокиться и не переживать столь долгое время?
+
+- можно давать себе маленькие выполнимые обещания на день, с чувством достойнства сложнее улезнуть от работы.
+
+- твоя личная проблема в откладывание дел на потом. У тебя это в любой сфере жизни, ты просто ленивый. Не будь таким, меняйся. Используй свой первекционизм в моменте. Пиши хороший код прямо сейчас, помой тарелку сейчас. Разбери всё с контроагентами сейчас, а не отложи на потом и т.д.
+
+# Чтобы я хотел привзнести в мою жизнь?
+## Дисциплина
+**Желание:** стать более дисциплинированным!
+**Достижение** уровня дисциплинированности:
+- утром душ + зарядка
+- работа не меньше 6 часов в день
+- уделять 1,5 часа в день на English и 1.5 часа в день на технологии
+- не попадаться в ловушку сми и социальных сетей
+- системность, постоянность, стабильность
+- спокойствие, смотреть на себя 50 летним мужиком
+
 ____ 
 ### Links
 - https://habr.com/ru/company/vk/blog/486890/
