--- a/Sheka/Base/Личный рост/Заметки по книгам/Преимущество счастья. Шон Ачор.md
+++ b/Sheka/Base/Личный рост/Заметки по книгам/Преимущество счастья. Шон Ачор.md
@@ -7,7 +7,171 @@ ____
 - Если усердно работать, то вы добьётесь успеха, а достигнув орпеделённых высот, вы будете счастливы. Сначала успех, потом - счастье. Но есть одна проблема: эта формула не совсем верна.
 - счастье - предшественник успеха, а не его следствие.
 
+## Заметки Вани Замесина
+### Актуализация
+
+-   Мы привыкли к схеме «Сначала надо добиться, потом станешь счастливым». Купишь новую тачку — станешь счастливым, получишь повышение — станешь счастливым. На самом деле эта формула не работает.
+-   С каждой новой победой мы ставим себе цели выше и выше и начинаем бежать к ним, не становясь счастливыми от предыдущего достижения.
+-   Исследования подтверждают: счастье предшествует успеху, оптимизм увеличивает нашу производительность, и именно этот тезис автор называет Happiness Advantage
+-   Мы не умеем справляться со стрессом: замыкаемся в себе, хотя поддержка друзей это один из главных способов справляться со стрессом; не можем найти выхода из проблемной ситуации.
+
+### Семь принципов
+
+1.  **Happiness Advantage** — можно переучить свой мозг быть позитивным и оптимистичным и выигрывать в продуктивности.
+2.  **Рычаг и точка опоры** — можно изменить восприятие происходящих с нами событий чтобы легче справляться со сложностями и видеть позитив.
+3.  **Эффект тетриса** — когда наш мозг видит только стресс, негатив и неудачи, мы застреваем в этом и продолжаем видеть вокруг нас только плохое. Можно научить мозг замечать паттерны возможностей.
+4.  **Falling up (падать вверх)** — как справляться с трудностями и становиться счастливее и более успешными благодаря трудностям.
+5.  **The Zorro Circle** — в условиях стресса можно сохранять контроль, фокусируясь на небольших достижимых задачах, постепенно увеличивая размер решаемых задач и, в итоге, решать проблему.
+6.  **Правило 20 секунд** — когда сила воли на нуле, с помощью минимальных затрат энергии возможно свернуть с пути наименьшего сопротивления. И, в итоге избавляться от старых привычек и привать новые.
+7.  **Социальные инвестиции** — одни из сильнейших драйверов нашего успеха — родственники, друзья, менторы.
+
+### Принцип #1: The happiness advantage
+
+-   Автор провёл мета-анализ 200 научных исследований , проведённых суммарно на 275,000 людях и выяснил что счастье приводит к успеху почти во всех сферах нашей жизни: браке, здоровье, дружбе, развитии сообществ, креативности, карьере и бизнесе. Исследования показывают что счастливые работники имеют выше продуктивность, выше продажи, показывают лучшие результаты на руководящих позициях, получают лучшие оценки труда и больше зарабатывают.
+-   Многочисленные исследования доказывают что формула: “счастье приводит к успеху”, работает только в таком порядке и не работает в обратном.
+-   Одно из самых известных длительных исследований счастья основано на дневниках 180 католических нянек, рождённых до 1917 года. Через пятьдесят лет учёные проанализировали дневники и сделали следующие выводы: к 85 годам, 90% самого счастливого квартиля (верхняя четверть выборки) были живы, в сравнении с 34% наименее счастливого квартиля.
+-   Роль позитивных и негативных эмоций в эволюции:
+
+1.  страх и стресс приводят к выбросу в кровь гормонов адреналина и норадреналина, которые обостряют наши чувства, ускоряют метаболизм, поднимают кровеносное давление и учащают сердцебиение. Этот механизм выработался с доисторических времён, когда наше выживание зависело от скорости реакции на появление хищника или добычи;
+2.  позитивные эмоции приводят к выработке гормонов дофамина, серотонина, которые позволяют мозгу быстрее запоминать бóльшее количество информации, быстрее доставать информацию спустя время;
+
+-   исследование Университета Торонто показывает что позитивные эмоции помогают visual cortex — части мозга, ответственному за обработку визуальной информации — обрабатывать бóльшее количество информации и видеть больше периферическим зрением;
+-   даже небольшой заряд позитива значительно увеличивает наши когнитивные способности. В одном из исследований доктора были разделены на три группы: первая группа была настроена на счастье, вторая группа находилась в нейтральном состоянии, но они до постановки диагноза читали потенциальные заключения, третья группа была абсолютно нейтральной. В итоге, первая группа значительно быстрее приходила к правильному диагнозу, они ставили верные диагнозы на 20% чаще в сравнении с контрольной группой и в два с половиной раза меньше якорились. Самый интересный факт — доктора первой группы были primed на позитив с помощью конфетки. Ни денежное вознаграждение, ни обещанный отпуск. Они даже не ели конфету.
+
+### Как стать счастливым?
+
+-   Хорошая новость: у всех нас есть контроль над нашим уровнем счастья. С помощью определённых усилий мы можем поднять базовый уровень счастья и, даже в тяжёлые жизненные моменты, уровень счастья будет не будет опускаться до уровня, вгоняющего нас в депрессию.
+-   Нам доступны разные способы увеличения базового уровня счастья. Помимо фундаментальных перемен в мышлении, отношений с семьёй и друзьями, счастье можно добывать из микромоментов — приятного разговора с другом, просмотра смешного ролика, подарка
+-   **Способы поднять базовый уровень счастья**:
+
+1.  **Медитация** : нейробиологи выяснили что монахи, годами практикующие медитацию, имеют значительно увеличенный левый prefrontal cortex — часть мозга, ответственную в том числе за позитивные эмоции. Исследования показывают что даже пятиминутная ежедневная медиация поднимает базовый уровень счастья, снижает стресс и улучает имунную функцию.
+2.  **Любимые занятия**: исследование показывает что предвосхищение занятия любимым делом (например, просмотр фильма), увеличивает выработку эндорфина на 27%. Добавьте в календарь свои любимые дела — рыбалку, путешествие, слот под хобби и когда вам нужен заряд позитивных эмоций — просто загляните в календарь и попредвкушайте. Ожидание будущих наград “зажигает” наши центры удовольствия практически так же как и настоящая награда.
+3.  **Сделайте осознанный акт доброты**: многочисленные исследования показывают что акт альтруизма снижает стресс и улучшает ментальное здоровье. Учёный Sonja Lyubomirsky, автор книги The How of Happiness, выяснила что группа людей, выполняющих пять осознанных актов доброты в течение одного дня чувствую себя значительно счастливее в сравнении с контрольной группой, и продолжают себя чувствовать счастливыми в течение продолжительного времени после эксперимента. Выберите один день в неделе, в течение которого вы будете проявлять акты доброты. Важно, чтобы они были осознанными, а не вспоминались постфактум: «О, вчера я придержал дверь для девушки, это было мило».
+4.  **Окружите себя позитивом** : поставьте фотографии любимых людей на рабочем месте, прогуливайтесь — исследование показывает что 20 минут проведённых на улице заряжают позитивными эмоциями и улучшают когнитивные функции.
+5.  **Уберите источники негативных эмоций**: не смотрите телеканалы и не читайте новостные источники, фокусирющиеся на трансляции насилия, коррупции и ненависти.
+6.  **Занимайтесь спортом:** исследование показало что занятия спортом помогают бороться с депрессией так же как и антидепрессанты, при постоянных занятиях спортом, шанс вернуться обратно в депрессивное состояние значительно ниже чем при приёме только медикаментов. И, конечно же, при занятиях спортом вырабатываются эндорфины.
+7.  **Тратьте деньги на experiences:**посещения концертов, ужины с друзьями, путешествия приносят больше радости, чем при покупке вещей на те же суммы.
+8.  **Exercise a signature strength**(прим. перевод: Используйте свои фирменные навыки: в исследовании, 577 волонтёров в течение недели каждый день использовали свои фирменные навыки — это могло быть что угодно: хобби, приготовление определённого блюда, общение с детьми — спустя полгода они чувствовали себя значительно счастливее в сравнении с контрольной выборкой.
+
+### The happiness advantage и лидерство
+
+-   Многие компании инвестируют в счастье своих сотрудников, например: Coors Brewing Company на каждый вложенный доллар в корпоративный фитнес получили 6,15$. В Toyota увидели мгновенное увеличение производительности труда когда провели тренинг по силовым упражнениям. Google и многие компании в силиконовой долине вкладывают большие деньги в офисы с массажем, столами для пинг-понга и фитнес-залами.
+-   Исследование показывает что команды с лидерами, которые признают конкретные заслуги своих сотрудников и вдохновляют их, перформят на 31% лучше команд с менее позитивными и вдохновляющими лидерами.
+-   Ежегодные премии за эффективность в американской армии значительно чаще достаются эскадронам под командованием позитивных и вдохновляющих офицеров.
+-   Losada line: за десятилетия исследований, бизнес-консультант Marcial Losada вывел соотношение в жизни команды позитивных событий к негативным, после преодоления которого команда становится успешной, и оно равно 2,9.
+
+### Принцип #2: Рычаг и точка опоры
+
+-   Отношение к ежедневным активностям определяет реальность сильнее, нежели сами активности.
+-   В 1979 году Ellen Langer провёл удивительный эксперимент: группа 75-летних мужчин на неделю выехали в ритрит-центр где для них был воссоздан 1959 год, когда им было по 55 лет. Они носили одежду из 59 года, обсуждали темы, актуальные на тот момент, носили бейджи с мест работы того года, читали книги и газеты, которые они могли прочесть когда им было 55 лет. У Langer’а была гипотеза что наши «ментальные конструкции» определяют состояние нашего организма и в том числе — старение. До ритрита каждый участник эксперимента прошёл тесты по всем параметрам, которые затрагивают старение: физической силе, способностям восприятия, когнитивным способностям и состоянию краткосрочной памяти. После ретрита большинство мужчин улучшили свои показатели по всем категориям: они стали значительно более гибкими, улучшилась краткосрочная память, даже зрение, в среднем, улучшилось на 10%.
+-   Плацебо показывают эффективность в 55 случаях из ста при замещении аспирина и кодеина для снятия боли.
+-   Было проведено исследование на клинерах, которые убирают несколько отелей: их разделили на две группы и одной из них рассказывали сколько калорий они сжигают за рабочий день и насколько похож процесс уборки на кардиоупражнения. Спустя несколько недель, участники первой группы статистически значимо снизили свой вес и у них снизился уровень холестерина, притом что количество работы они выполняли одинаковое.
+-   Эти эксперименты подтверждают «Теорию эффекта ожидания»: при предвкушении события, в нашем мозгу «зажигается» тот же набор нейронов что и при самом событии. И это вызывает ряд событий в нервной системе, которые приводят к физическим изменениям в организме.
+-   Меняя отношение к происходящим событиям, можно извлекать их них значительно больше пользы:
+
+1.  перед встречей, которую ты изначально считал изнурительной и бесмысленной, можно запраймить себя на неизбежный позитивный исход и поставить цель научиться за встречу трём новым вещам;
+2.  поменять отношение к чтению книг с «мне это нужно» на «это доставляет мне удовольствие» и мозг не будет избегать процесс не доставляющий удовольствия;
+3.  избавиться от синдрома трудяги и перестать испытывать чувство вины за впустую проводимое время во время отдыха или занятий хобби, чтобы полноценно восстанавливать энергию.
+
+-   Исследования показывают: вера в наши способности и способности развиваться значительно увеличивает вероятность достижения успеха: в 2008 году было проведено исследование, в котором приняли участие 400 американцев. Непосредственно до выборов президента США, на которых победил Барак Обама, и сразу после выборов группы участников прошли стандартный тест на когнитивные способности. Результаты тестов до выборов показали что афро-американцы значимо хуже белокожих по когнитивным способностям. Результаты тестов после выборов не показали никакой разницы между афро-американцами и светлокожими.
+-   Принцип рычага и опоры можно использовать для того, чтобы добиваться большего, например, при подготовке к выступлению, можно сфокусироваться на том, что у тебя отличный рассказ, ты проделал огромную исследовательскую работу а не на страхах и том что у тебя нет опыта публичных выступлений.
+-   Вера в то, что наши способности могут улучшаться, так же важна как и сама вера в способности: в исследовании на 373 студентах, которое заняло два года, наблюдались две группы студентов: те, кто считал что их способности «фиксированы» и почти не развиваются со временем и те, кто считал что их способности к развитию не имеют ограничений. Спустя два года, группа с майндсетом на рост способностей показала рост средней оценки, а группа с фиксированным майндсетом не показала никаких изменений.
+
+### Принцип #3: Эффект тетриса
+
+-   В исследовании, в котором приняли участие 27 человек, участники играли в тетрис на протяжении трёх дней подряд. В течение многих дней после исследования, не могли перестать замечать фигуры из игры в реальной жизни. Этот эффект называется «cognitive afterimage» (прим. перевод: когнитивный след). Примерно такой же эффект замечается в течение секунд после наблюдения очень яркого источника света — вспышки или солнца — в виде синих или зеленых пятен. Игра в тетрис в течение продолжительного времени создала новые нейронные связи в мозгах участников и это влияло на их восприятие мира.
+-   Все мы подвержены влиянию этого эффекта и легче всего его заметить у людей, которые постоянно чем-то недовольны и раздражены. Парадоксально, но они не пытаются быть такими, просто их мозги очень хорошо обучены видеть негатив и причины для раздражения и они становятся заложниками такого паттерна поведения.
+-   Мы можем применить эффект тетриса для того чтобы научиться постоянно видеть позитивные вещи во всём что нас окружает.
+-   Эффект тетриса можно использовать для того чтобы прокачать:
+
+1.  счастье;
+2.  благодарность — многочисленные исследования показывают что люди, которые регулярно испытывают благодарность имеют больше энергии и реже подвержены депрессиям и одиночеству
+3.  оптимизм — чем больше ваш мозг замечает позитива вокруг, тем больше вы замечаете тренд на позитивные события и тем более оптимистичными вы становитесь. Исследования показывают что оптимисты ставят перед собой больше целей и более амбициозные цели, вкладывают в достижение целей больше усилий чем пессимисты и легче справляются с трудностями.
+
+-   Невероятно интересное исследование было проведено Ричардом Вайсманом, в котором он пытался понять, почему одни люди удачливы, а другие считают себя неудачниками. Волонтёрам нужно было прочесть газету и посчитать количество фотографий. Волонтёры, которые считали себя удачливыми тратили на задание секунды, а у неудачливых задание занимало в среднем две минуты. Откуда такая большая разница? На второй странице гащеты крупным текстом было написано “Перестань считать, в этой газете 43 фотографии”. И неудачливые люди скорее пропускали этот текст. И в середине газеты было ещё одно сообщение, которое пропускали неудачливые люди: «Перестань считать и скажи экспериментатору что ты выиграл 250$».
+-   Лучший способ применить Эффект Тетриса к себе — начинать свой день с написания списка из трёх позитивных вещей, которые случились с тобой вчера — в работе, личной жизни или хобби. Участники исследования, которые записывали три хорошие вещи каждый день в течение недели оставались более счастливыми в течение нескольких месяцев после исследования.
+-   Ведение дневника про позитивные события имеет такой же эффект и в одном из исследований показало рост счастья и, даже, снижение уровня заболеваний в сравнении с контрольной группой.
+
+### Принцип #4: Falling up (падать вверх)
+
+-   Мы принимаем успешные решения только когда мыслим ясно и креативно, и видим все доступные пути. Проблема в том, что когда мы находимся в стрессе или кризисе, многие люди не видят самого правильного пути: пути вверх.
+-   Когда мы находимся в кризисе, нам доступны три возможных пути: путь, который приведёт к бóльшим негативным последствиям, путь который оставит нас в текущей ситуации и путь, который выведет нас из кризиса и переведёт нас на следующий уровень. Когда мы находимся в кризисе, мы чувствуем себя беспомощными и не верим что путь выхода из кризиса существует. Я (автор) часто наблюдал это во время кризиса 2008 года, когда рушились инвестбанки и тысячи людей, лишённые надежды, не могли выбраться из отчаяния.
+-   Исследования показывают что если люди способны в неудаче видеть возможность для роста, они скорее всего и продемонстрируют этот рост.
+-   Tal Ben-Shalar в своей книге «The Pursiut of Perfect» пишет: мы можем учиться на ошибках, только испытывая и проживая их. Чем раньше мы испытаем трудности, тем лучше мы будем подготовлены к неизбежным препятствиям на нашем пути. Исследования показывают, что люди, делающие больше ошибок за единицу времени, значительно увереннее в себе и допускают меньше ошибок в будущем.
+-   Learned helplesness (прим. перевод: выученная беспомощность): эксперименты показывают что многие люди подвержены обучению беспомощности при попадании в ситуации, когда им кажется, что от них ничего не зависит. И в будущем, эти люди склонны к проявлению беспомощности в более простых для решения ситуациях, что приводит к пессимизму и депрессии.
+-   Многие компании используют кризисы для того, чтобы найти новые рынки сбыта, значительно оптимизировать расходы или сменить продукт. Это и есть falling up — нахождение позитивного исхода из кризисной ситуации.
+-   Измените стиль описания вашего опыта: Martin Seligman в конце 1980х провёл исследование для страховой компании MetLife, которая хотела снизить текучку продажников. В ходе исследования он выяснил, что наиболее эффективные продажники, которые при этом и дольше работают в сравнении с менее эффективными, описывают свой прошлый опыт с оптимизмом, а проблемы как локальные и временные (например: «Это не так плохо, будет лучше»). Их вера напрямую влияет на их будущие действия.
+-   Мы всегда переоцениваем негативный эффект от случившихся или предполагаемых неприятностей. Эволюция научила нас предвидеть наихудший возможный исход любых событий и заранее переживать их, чтобы защитить себя от нападения хищника. Но исследования показывают, что даже после ужасных травм вызывающих паралич, люди довольно быстро восстанавливаются к до-травматическому уровню счастья.
+-   Как справляться с трудностями и использовать их как возможность для роста:
+
+1.  A is for Adversity (перевод: трудность): это факт, который мы не можем изменить, мы принимаем его таким каков он есть
+2.  B is for Belief (вера): наша реакция на трудность — почему это произошло и что это значит для будущего. Это временная и решаемая проблема, или она постоянная и всепроникающая. Знаем ли мы решение или эта проблема нерешаема.
+3.  C is for Consequence (последствия): Если мы верим в то, что эта проблема временна или считаем её возможностью для роста — тогда мы максимизируем вероятность позитивного исхода. Если мы не видим решения, считаем что проблема останется с нами навсегда, тогда в ход идёт:
+4.  D is for Disputation (оспаривание): сначала мы говорим себе что наша вера это всего-дишь мнение, а не факт. И пытаемся оспорить негативные аспекты трудности. Есть ли другие возможные реакции на эту трудность? Почему именно так мы реагируем на эту трудность? А уж если это настоящая проблема:
+5.  D is also for Decatastrophic (декатастрофизация:): мы скорее всего переоцениваем негативный эффект этой проблемы. Попробуйте убедить себя в том, что последствия будут значительно меньше и вы скорее всего быстро вернётесь к прежнему уровню счастья.
+
+### Принцип #5: The Zorro Circle
+
+-   Один из важнейших драйверов успеха — вера, что у нас есть контроль над будущим и наше поведение приносит результат.
+-   Когда стресс и трудности превосходят наши возможности справляться с ними, особенно, когда пытаемся разом от них избавиться, легко захлебнуться и войти в состояние learned helplesness. Чтобы справиться с большим количеством трудностей, нужно концентрировать усилия на небольших достижимых целях. Таким образом, мы возвращаем контроль, необходимый для продуктивности. Ограничивая зону применения усилий, мы наблюдаем как усилия приносят нужный эффект, накапливаем ресурсы, знания и уверенность, чтобы увеличивать размер решаемых задач и, со временем полностью решаем все накопленные проблемы.
+-   Людей можно разделить на тех, кто видит причины своего успеха и сложностей в своих действиях и тех, кто винит или благодарит внешние события. Первые, доказано, счастливее, здоровее, успешнее в карьере и науке. При этом важно не то, сколько реального контроля есть у человека над событиями, а факт что он считает что у него есть контроль.
+-   Удивительное исследование, проведённое на пожилых людях показывает, что если пожилым людям дать больше контроля над простыми задачами в их повседневной жизни, например: поменять цветок в горшке, их уровень смертности падает вдвое в сравнении с контрольной группой.
+-   В нашей жизни есть два механизма принятия решений: эмоциональный, за который отвечает амигдала или лимбический мозг — наиболее древний и быстро реагирующий на внешние раздражители — и рациональный, за который неокортекс. Часто, в стрессовых и критических ситуациях когда нужна работа рационального механизма, эмоциональный берёт верх и мы не способы принимать рациональные решения.
+-   Финансовые потери «зажигают» те же области мозга, которые зажигаются при угрозе жизни. Другими словами, потерю денег мы испытываем так же как и нападение саблезубого тигра.
+-   Как в стрессовых ситуациях брать эмоции под контроль и рационально справляться со сложностями:
+
+1.  исследования показывают что самый эффективный способ справиться с эмоциями — назвать их. Когда мозг облекает эмоции в слова, сила негативных эмоций угасает и мы чувствуем себя значительно лучше. Напишите запись в дневнике о ваших чувствах, поделитесь с другом или коллегой;
+2.  разделите аспекты ситуации на те, над которыми у вас есть контроль, и на те, над которыми у вас нет контроля;
+3.  выпишите наименьшую достижимую цель в зоне где у вас есть контроль. И начните работать над ней;
+4.  как только вы достигните этой цели, порадуйтесь и ставьте бóльшие цели.
+
+### Принцип #6: Правило 20 секунд
+
+-   Common sense is not common action (перевод: здравый смысл — не значит общепринятое действие).
+-   В реальной жизни, знание это всего лишь часть успеха. Без действий, знание не имеет ценности. Как говорил Аристотель: чтобы быть выдающимся, недостаточно думать как выдающийся человек или чувствовать себя выдающимся, нужно ещё вести себя так.
+-   Мы — всего лишь набор наших привычек, которые определяют всю нашу жизнь.
+-   Чем чаще мы выполняем опредённое действие, тем больше создаётся нейронных связей, превращающих это действие как привычку (оригинал: «cells that fire together wire together»).
+-   Сила воли — ограниченный ресурс. К ней можно относиться как к запасу горючего. На каждое решение, которые мы принимаем в течение дня мы тратим определённый запас силы воли, и, к концу дня, или после тяжёлой встречи наши баки на нуле.
+-   Привычки не изменяются только лишь за счёт силы воли. Наши обещания сесть на диету или ходить в спортзал с первого января, обычно заканчиваются спустя неделю или две.
+-   Чтобы изменить существующую привычку или создать новую, встаньте на путь наименьшего сопротивления, который приблизит к формированию этой привычки:
+
+1.  если хотите заниматься спортом — ставьте у кровати кроссовки, надевайте их сразу же как проснётесь и походите в них двадцать секунд, предвкушая пробежку;
+2.  если вы каждый день заезжаете в магазин за мороженым — потратьте минуту чтобы построить другой маршрут в объезд привычного магазина;
+3.  если вы слишком много времени смотрите телевизор — вытащите батарейки из пульта и спрячьте их подальше, чтобы тратить как можно больше времени на включение телевизора.
+
+-   Таким образом, вы снизите энергию на активацию тяжёлого и непривычного действия «ох, сейчас мне надо будет бежать пять километров» на активацию простого и доступного действия «я надену кроссовки, похожу в них немного, а дальше как пойдёт»
+
+### Принцип #7: социальные инвестиции
+
+-   Когда мы сталкиваемся с неожиданным вызовом или угрозой, часто, единственный выход — обратиться за помощью к близким людям.
+-   Когда мы общаемся с приятным человеком — вырабатывается гормон окситоцин, который снижает уровень тревоги, улучшает концентрацию и фокус. Каждая социальный контакт поддерживает наши сердечно-сосудистую, иммунную и нейроэндокринную системы. Чем больше социальных связей мы имеем, тем лучше мы функционируем.
+-   Исследования показывают: чем сильнее социальные связи у человека, тем меньше стресса он испытывает во время трудностей и тем выше вероятность интерпретировать трудность как возможность для роста. И если такой человек испытывает стресс, он быстрее оправляется от стресса.
+-   Исследователи из MIT год изучали результаты работы 2 600 сотрудников IBM и пришли к выводу, что каждый email-контакт добавляет $948 дохода сотрудника (прим. ред: видимо, годового).
+
+### The ripple effect (нужна помощь с переводом)
+
+-   Если вы хотите чтобы ваши друзья или близкие тоже извлекли выгоду из Happiness Advantage — подарите им эту книгу, а лучше, покажите на своём примере как можно быть счастливее, оптимистичнее и легче справляться с трудностями
+-   Чем чаще вы практикуете упражнения по принципам из этой книги, тем более прочными становятся нейронные связи, отвечающие за эти привычки.
+-   Эмоции и социальное поведение заразительны. Если вы счастливы, оптимистичны и улыбаетесь — люди вокруг вас незаметно будут становиться счастливее и оптимистичнее.
+
+### Что я забрал или хочу забрать из этой книги
+
+**Что точно работает на 26 июля 2017 года:**
+
+1.  **The Happiness Advantage:** Каждое утро за завтраком на протяжении двух месяцев пишу три хорошие вещи, которые случились со мной за вчерашний день. Это самая приятная и легкопрививаемая привычка которую я когда-либо приобретал. Я не замерял свой уровень счастья до, поэтому не могу сравнить с текущим состоянием. Субъективно, я стал чаще радоваться происходящим со мной событиям и своим достижениям.
+2.  **20 seconds rule:** После каждого использования приложений Facebook или Instagram удаляю приложения. Поскольку приложение фейсбука весит 100+ мегабайт, оно скачивается только дома — провожу в них значительно меньше времени.
+
+**Что я хочу забрать:**
+
+1.  **Эффект тетриса:** Три раза в неделю практиковать осознанные акты благодарности. Например, позвонить близким и рассказать за что благодарен им. Коллегам, друзьям, знакомым.
+2.  **Социальные инвестиции:** хочу завести несколько ритуалов, типа походов в Сандуны с друзьями и занятий командным спортом.
+3.  **Рычаг и точка опоры:** научиться предвкушать прекрасные события в будущем и составлять планы на месяц-неделю-день, чтобы эти события со мной происходили.
+
+**MindMap с самым главным из книги**
+
+![](https://cdn-images-1.medium.com/max/2600/1*Bh6X1ZJUPtNphSi2aRjrDA.png)
+
 
 ____ 
 ### Links
--
+- https://zamesin.me/books-the-happiness-advantage
