--- a/Sheka/Base/Личный рост/Режим дня.md
+++ b/Sheka/Base/Личный рост/Режим дня.md
@@ -19,18 +19,17 @@ ____
 - 3 часа личного времени 
 - около 40 минут чтения
 
-
-#day_1
+#day_02_05
 встал в 8:20
 сел за комп в 9:00
 10:23, поел и позанимался час. 
 до 11 : 00  отвлекался
+#day_03_05
+дела по квартире немного всё сбили. также после дейли не работал. Но было немного обучения, зарядка и хороший спорт
+#day_03_05 
+спал с 22 до 7 (9 часов), сел за комп в 7:15, помыл всю посуду, сделал очень хорошую зарядку-растяжку (25 мин)
 
-план:
-перебрать мой документ
-попрактиковаться с текщими знаниями
-досмотреть и законспектировать неусвоенные видосы
-смотреть всё, что связано с удалённым репозиторием
+
 
 
 
