--- a/Sheka/Base/Личный рост/Дневник/Мысля.md
+++ b/Sheka/Base/Личный рост/Дневник/Мысля.md
@@ -23,6 +23,34 @@ ____
 Делать зарядку 
 Не есть мучное, сладкое, рафинированное. Не кушать после 18:00
 
+проблема времени, если есть свободное время, то я его просиарю. если плотный график, то его не теряю
+
+
+
+92 дня
+
+### 140 часов 
+Если я смогу до 31 августа потратить 140 часов на обучение технических навыков и разработку приложений, то я покупаю себе маленький дрон.  :)
+
+
+### Что для меня есть счастье
+
+#### Работа
+#### Не работа
+Семья. Таня. Чувства любви, поддержки. Возможность вместе разделить множество моментов. Тут имеется в виду только Таня.
+
+Семья. Родители. Семейные ужины и вылазки на
+
+Игровой спорт, мне очень нравится командная игра, чувства сплоченности и сыгранности, совместная победа. Так же и единичный успех, но чтобы не быть в центре внимания долго. Получаю больше всего удовольствия, когда игра идёт на одинаковом уровне.
+
+Интересный отдых с друзьями. Это может быть дневное путешествие, поход в заведение, настольные игры, совместная готовка или просто готовка для друзей.
+
+Получение сложного дофамина через чтение книг, создание новых знаний, привывания и достижения полезных привычек.
+
+
+### Какие у меня тригеры на плохое настроение
+
+
 
 
 ____ 
